# Brickwell_Health

./: .gitignore  .python-version  README.md  databricks.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.serena/: project.yml
.serena/memories/: architecture_cheatsheet.md  code_style_conventions.md  development_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
Azure/: databricks_zerobus_tables_complete.sql
brickwell_health/: __init__.py  cli.py
brickwell_health/config/: __init__.py  ifrs17.py  loader.py  management_expense.py  models.py  regulatory.py  validation.py
brickwell_health/core/: __init__.py  checkpoint.py  checkpoint_v2.py  environment.py  llm_processor.py  parallel_runner.py  partition.py  serializers.py  shared_state.py  state_reconstruction.py  trigger_engine.py  worker.py
brickwell_health/db/: __init__.py  connection.py  initialize.py  protocol.py  reference_db_loader.py  schema_billing.sql  schema_claims.sql  schema_communication.sql  schema_crm.sql  schema_digital.sql  schema_finance.sql  schema_ifrs17.sql  schema_init.sql  schema_management_expense.sql  schema_member_lifecycle.sql  schema_nba.sql  schema_policy.sql  schema_reference.sql  schema_reference_fk.sql  schema_regulatory.sql  schema_survey.sql  schema_system.sql  scrub_benefit_usage.py  writer.py
brickwell_health/domain/: __init__.py  application.py  billing.py  claims.py  commission.py  communication.py  coverage.py  crm.py  digital.py  enums.py  ifrs17.py  management_expense.py  member.py  nba.py  policy.py  survey.py
brickwell_health/generators/: __init__.py  application_generator.py  base.py  billing_generator.py  claims_generator.py  commission_generator.py  communication_generator.py  coverage_generator.py  crm_generator.py  digital_generator.py  fraud_generator.py  id_generator.py  (+5 more)
config/: simulation.yaml  simulation.yaml.example
tests/: __init__.py  conftest.py
(+144 files in other folders)
